# projetSTA

./: CMakeLists.txt  Synoptique Trame Can Train - V3.0.pptx  comm.c  example.c  rbc.c  rbc.h  surveillance_arret.c
Libs_Unirail/CAN/: MESCAN1_DefinitionVariable.h  MESCAN1_MAIN_PARAMS.h  MESCAN1_Utilitaire.c  MESCAN1_Utilitaire.h  MESCAN1_VarStatusTrain.c  MESCAN1_VarStatusTrain.h  MESCAN1_VarTrain.c  MESCAN1_VarTrain.h  canLinux.c  canLinux.h  loco_MAIN_PARAMS.h
Libs_Unirail/ERTMS/: GSM_R_message.h  GSM_R_packet.h
Libs_Unirail/XBEE/: xbee.c  xbee.h
